syntax = "proto3";

option go_package = "proto/profile";

service ProfileService{
  rpc Register(ProfileRegisterRequest) returns (ProfileRegisterResponse){}
  rpc GetUserProfile(UserProfRequest) returns (UserProfResponse){}

}
message ProfileRegisterRequest{
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string gender = 5;
  string country = 6;
}
message ProfileRegisterResponse{

}
message UserProfRequest{
  string username = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string gender = 5;
  string country = 6;
}
message UserProfResponse{

}
