syntax = "proto3";

option go_package = "proto/social";
service SocialService {
  rpc RegUser(RegUserRequest) returns(RegUserResponse){}
  rpc RequestToFollow(FollowIntentRequest) returns(FollowIntentResponse){}
}
message RegUserRequest{
  string username = 1;
}
message RegUserResponse{
}

message FollowIntentRequest{
  string username = 1;
}
message FollowIntentResponse{
  string status = 1;
}